Create API for getting latest trips
